Ready Metatags and RRSS cards

--- a/index.html
+++ b/index.html
@@ -9,10 +9,32 @@
 	<link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="theme-color" content="#001124">
 	
-	<!--meta tags-->
+	<!--Meta tags-->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta charset="UTF-8">
+    <meta name="description" content="Empresa Venezolana de desarrollo de software, con los mejores talentos en el área ">
+    <meta name="keywords" content="Software,Web,Diseño,Movil,HTML,CSS,XML,JavaScript">
+    <meta name="author" content="CreativeSoft C.A.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Schema.org markup for Google+ -->
+	<meta itemprop="name" content="CreativeSoft">
+	<meta itemprop="description" content="We develop you Ideas!">
+	<meta itemprop="image" content="https://pasantias-joseduin.c9users.io/assets/image/miniatura.png">
 	
+	<!-- Open Graph data -->
+	<meta property="og:title" content="CreativeSoft" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content=" http://www.creativesoft.com.ve/" />
+	<meta property="og:image" content="https://pasantias-joseduin.c9users.io/assets/image/miniatura.png" />
+	<meta property="og:description" content="We develop your Ideas" />
+	
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:title" content="CreativeSoft" />
+	<meta name="twitter:description" content="We develop your Ideas!" />
+	<meta name="twitter:image" content="https://pasantias-joseduin.c9users.io/assets/image/miniatura.png" />
+    
 	<!--styles-->
 	<link href="assets\css\bootstrap.min.css" rel="stylesheet">
 	<link href="assets\css\paper-kit.css" rel="stylesheet">
